# rust_secure_programming

./: .gitignore  Cargo.toml  README.md  db_entry.rs  encryption.rs  main.rs  my_key.rs  tampered_test  text.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: file_deletion.rs  fuzz_target_1.rs
