[package]
name = "secure"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
block-padding = "0.3.3"
cargo-credential-wincred = "0.4.8"
generic-array = "1.1.0"
hex = "0.4.3"
rand = "0.8.5"
redb = "2.2.0"
rpassword = "7.3.1"
rust-argon2 = "2.1.0"
secrecy = "0.10.3"
typenum = "1.17.0"
wincredentials = "0.2.0"
windows = {version = "0.58" , features = ["Win32_Security_Credentials", "Win32_Security_Cryptography", "Win32_System_Com"]}

[[bin]]
name = "secure"
path = "main.rs"
