[package]
name = "secure"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
base32 = "0.5.1"
block-padding = "0.3.3"
cargo-credential-wincred = "0.4.8"
chrono = "0.4.38"
generic-array = "1.1.0"
google-authenticator = {version = "0.4.2", features = ["with-qrcode"]}
hex = "0.4.3"
image = "0.25.5"
native-dialog = "0.7.0"
open = "5.3.1"
qrcode = "0.14.1"
rand = "0.8.5"
rpassword = "7.3.1"
rust-argon2 = "2.1.0"
secrecy = "0.10.3"
typenum = "1.17.0"
wincredentials = "0.2.0"

[[bin]]
name = "secure"
path = "main.rs"
