[package]
name = "secure"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
base32 = "0.5.1"
block-padding = "0.3.3"
cargo-credential-wincred = "0.4.8"
chrono = "0.4.38"
ctrlc = "3.4.5"
dialoguer = "0.11.0"
env_logger = "0.11.5"
generic-array = "1.1.0"
google-authenticator = {version = "0.4.2", features = ["with-qrcode"]}
hex = "0.4.3"
hmac = "0.12.1"
image = "0.25.5"
lazy_static = "1.5.0"
log = "0.4.22"
native-dialog = "0.7.0"
open = "5.3.1"
qrcode = "0.14.1"
rand = "0.8.5"
rand_core = "0.6.4"
ring = "0.17.8"
rpassword = "7.3.1"
rust-argon2 = "2.1.0"
secrecy = "0.10.3"
sha2 = "0.10.8"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
typenum = "1.17.0"
widestring = "1.1.0"
winapi = "0.3.9"
wincredentials = "0.2.0"
wincredentials-bindings = "0.1.0"
windows = { version = "0.58.0", features = ["Win32_System_EventLog", "Win32_Security"] }


[[bin]]
name = "secure"
path = "main.rs"
