[package]
name = "secure-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand = "0.8"
tempfile = "3.3"  # If you use temporary file handling
hex = "0.4.2"     # For hex encoding
aes = "0.7"       # Replace with the appropriate version of your cipher crate
cipher = "0.3"

[dependencies.secure]
path = ".."

[[bin]]
test = false
doc = false
bench = false
name = "file_deletion"
path = "fuzz_targets/file_deletion.rs"